fixed background image not showing in production

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
     justify-content: center;
     height: 300px;
     color: #FFFFFF;
-    font-size: 72px;
+    font-size: 64px;
     font-weight: bold;
     background-image: url('assets/hero-bg.jpg');
     background-size: cover;
